migrated java code to new directory structure